rust/herb-highlighter/tests/snapshots/file_renderer_test__highlights_focus_line_and_dims_others.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: strip_ansi_colors(&result)
---
/test/file.erb

      2 │ line 2
  →   3 │ line 3
      4 │ line 4
