rust/herb-highlighter/tests/snapshots/file_renderer_test__preserves_exact_content_structure.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: strip_ansi_colors(&result)
---
line 1

line 3
    indented line
