rust/herb-highlighter/tests/snapshots/file_renderer_test__renders_a_multi_line_comment_with_line_numbers.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: "renderer.render_with_line_numbers(\"/test/file.erb\", content,\n&options(false, width(), false))"
---
[36m/test/file.erb[0m

    [90m  1[0m [90m│[0m [38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m
    [90m  2[0m [90m│[0m   [38;2;92;99;112m<!--[0m[38;2;92;99;112m [0m[38;2;92;99;112mfirst[0m[38;2;92;99;112m [0m[38;2;92;99;112mcomment[0m[38;2;92;99;112m [0m[38;2;92;99;112mline[0m[38;2;92;99;112m
    [90m  3[0m [90m│[0m [0m[38;2;92;99;112m  [0m[38;2;92;99;112msecond[0m[38;2;92;99;112m [0m[38;2;92;99;112mcomment[0m[38;2;92;99;112m [0m[38;2;92;99;112mline[0m[38;2;92;99;112m [0m[38;2;92;99;112m-->[0m
    [90m  4[0m [90m│[0m   [38;2;224;108;117m<[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m[38;2;171;178;191mok[0m[38;2;224;108;117m</[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m
    [90m  5[0m [90m│[0m [38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m
