rust/herb-highlighter/tests/snapshots/file_renderer_test__renders_content_with_line_numbers.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: strip_ansi_colors(&result)
---
/test/file.erb

      1 │ line 1
      2 │ line 2
      3 │ line 3
