rust/herb-highlighter/tests/snapshots/file_renderer_test__truncates_lines_in_plain_rendering.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: strip_ansi_colors(&result)
---
This is another very long line that should be t…
