rust/herb-highlighter/tests/snapshots/file_renderer_test__truncates_long_lines_with_ellipsis.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: strip_ansi_colors(&result)
---
/test/file.erb

      1 │ This is a very long line that should …
