rust/herb-highlighter/tests/snapshots/file_renderer_test__works_without_line_numbers.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: strip_ansi_colors(&result)
---
line 1
line 2
line 3
